Support load and display of the area of interest.

--- a/image_selection/dialog_base.ui
+++ b/image_selection/dialog_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1003</width>
+    <width>1027</width>
     <height>1032</height>
    </rect>
   </property>
@@ -195,12 +195,22 @@
               </widget>
              </item>
              <item>
-              <widget class="QToolButton" name="loadProject">
+              <widget class="QToolButton" name="loadAoi">
                <property name="toolTip">
-                <string>Load project file</string>
+                <string>Load the area of interest</string>
                </property>
                <property name="text">
-                <string>Load</string>
+                <string>AoI</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="loadAerials">
+               <property name="toolTip">
+                <string>Load a spread sheet with aerial image meta data</string>
+               </property>
+               <property name="text">
+                <string>Aerials</string>
                </property>
               </widget>
              </item>
