- correctly encode as URL fragment the aerials filtered in the browser window. - limit the display of aerials to those filtered in the browser window, in addition to the filters on the GUI. - use a single slot to tell the scene which items to display - main window: directly emit scene-signals. - zoom fit: zoom to visible items only.

--- a/image_selection/main_window_base.ui
+++ b/image_selection/main_window_base.ui
@@ -158,7 +158,7 @@
              <item>
               <widget class="QToolButton" name="mapZoomNative">
                <property name="toolTip">
-                <string>Zoom to native map resolution.</string>
+                <string>Zoom map to its native resolution.</string>
                </property>
                <property name="icon">
                 <iconset resource="resources.qrc">
@@ -169,7 +169,7 @@
              <item>
               <widget class="QToolButton" name="mapZoomFit">
                <property name="toolTip">
-                <string>Zoom map to aerials.</string>
+                <string>Zoom map to visible aerials and AoI.</string>
                </property>
                <property name="icon">
                 <iconset resource="resources.qrc">
