--- a/image_selection/preview_window_base.ui
+++ b/image_selection/preview_window_base.ui
@@ -34,53 +34,56 @@
      <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QGroupBox" name="groupBox">
+        <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
-          <string>Contrast enhancement</string>
+          <string>View</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QRadioButton" name="off">
+           <widget class="QToolButton" name="rotateLeft">
             <property name="toolTip">
-             <string>No enhancement.</string>
+             <string>Rotate images counterclockwise by 90°</string>
             </property>
             <property name="text">
-             <string>Off</string>
+             <string>left</string>
             </property>
             <property name="icon">
              <iconset resource="resources.qrc">
-              <normaloff>:/plugins/image_selection/light-bulb-off</normaloff>:/plugins/image_selection/light-bulb-off</iconset>
+              <normaloff>:/plugins/image_selection/rotateLeft</normaloff>:/plugins/image_selection/rotateLeft</iconset>
             </property>
-            <property name="checked">
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="rotateRight">
+            <property name="toolTip">
+             <string>Rotate images clockwise by 90°</string>
+            </property>
+            <property name="text">
+             <string>right</string>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/plugins/image_selection/rotateRight</normaloff>:/plugins/image_selection/rotateRight</iconset>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QToolButton" name="contrastEnhancement">
+            <property name="toolTip">
+             <string>Enhance the contrast.</string>
+            </property>
+            <property name="text">
+             <string>Contrast</string>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/plugins/image_selection/contrast-stretch</normaloff>:/plugins/image_selection/contrast-stretch</iconset>
+            </property>
+            <property name="checkable">
              <bool>true</bool>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="minMax">
-            <property name="toolTip">
-             <string>Stretch (almost) minimum and maximum values linearly to maximum range.</string>
-            </property>
-            <property name="text">
-             <string>MinMax</string>
-            </property>
-            <property name="icon">
-             <iconset resource="resources.qrc">
-              <normaloff>:/plugins/image_selection/arrow-resize-090</normaloff>:/plugins/image_selection/arrow-resize-090</iconset>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="histogram">
-            <property name="toolTip">
-             <string>Histogram equalization.</string>
-            </property>
-            <property name="text">
-             <string>Histogram</string>
-            </property>
-            <property name="icon">
-             <iconset resource="resources.qrc">
-              <normaloff>:/plugins/image_selection/chart</normaloff>:/plugins/image_selection/chart</iconset>
+            <property name="popupMode">
+             <enum>QToolButton::MenuButtonPopup</enum>
             </property>
            </widget>
           </item>
@@ -110,7 +113,7 @@
        <string>Mark the wanted preview with a rectangle.</string>
       </property>
       <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
+       <enum>Qt::ScrollBarAsNeeded</enum>
       </property>
       <property name="dragMode">
        <enum>QGraphicsView::RubberBandDrag</enum>
