--- a/image_selection/main_window_base.ui
+++ b/image_selection/main_window_base.ui
@@ -497,6 +497,27 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="Line" name="line_5">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="exportSelectedImages">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="text">
+                <string>...</string>
+               </property>
+               <property name="icon">
+                <iconset resource="resources.qrc">
+                 <normaloff>:/plugins/image_selection/image-export</normaloff>:/plugins/image_selection/image-export</iconset>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
