contrast limited adaptive histogram equalization

--- a/image_selection/resources.qrc
+++ b/image_selection/resources.qrc
@@ -20,6 +20,7 @@
         <file alias="target">resources/target.png</file>
         <file alias="arrow-resize-090">resources/arrow-resize-090.png</file>
         <file alias="chart">resources/chart.png</file>
+        <file alias="chart--plus">resources/chart--plus.png</file>
         <file alias="layer-shape-polygon">resources/layer-shape-polygon.png</file>
         <file alias="selection">resources/selection.png</file>
         <file alias="tick">resources/tick-red.png</file>
