--- a/image_selection/main_window_base.ui
+++ b/image_selection/main_window_base.ui
@@ -685,6 +685,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="nAerialsShown">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="text">
+         <string>Showing   0 of   0 aerials</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::PlainText</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
