--- a/image_selection/main_window_base.ui
+++ b/image_selection/main_window_base.ui
@@ -100,6 +100,12 @@
              </property>
              <item>
               <widget class="QLabel" name="label_2">
+               <property name="minimumSize">
+                <size>
+                 <width>24</width>
+                 <height>0</height>
+                </size>
+               </property>
                <property name="text">
                 <string>Map</string>
                </property>
@@ -489,7 +495,7 @@
               </widget>
              </item>
              <item>
-              <widget class="Line" name="line_5">
+              <widget class="Line" name="line_6">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
                </property>
@@ -499,6 +505,9 @@
               <widget class="QToolButton" name="exportSelectedImages">
                <property name="enabled">
                 <bool>false</bool>
+               </property>
+               <property name="toolTip">
+                <string>Export the selected aerial images' metadata.</string>
                </property>
                <property name="text">
                 <string>...</string>
@@ -526,6 +535,9 @@
              </property>
              <item>
               <widget class="QToolButton" name="GEO">
+               <property name="toolTip">
+                <string>Photogrammetry @ GEO @ TU Wien, Austria</string>
+               </property>
                <property name="text">
                 <string>...</string>
                </property>
@@ -556,6 +568,31 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="groupBox_2">
+            <property name="title">
+             <string/>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="AerialCombo" name="highlight">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="toolTip">
+                <string>Highlight an aerial.</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
           </item>
          </layout>
         </item>
@@ -717,6 +754,16 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="whatsThis">
+        <property name="toolTip">
+         <string>Click here and then somewhere else to get help.</string>
+        </property>
+        <property name="text">
+         <string>What's this?</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -733,6 +780,11 @@
    <class>MapView</class>
    <extends>QGraphicsView</extends>
    <header>image_selection.map_view</header>
+  </customwidget>
+  <customwidget>
+   <class>AerialCombo</class>
+   <extends>QComboBox</extends>
+   <header>image_selection.main_window</header>
   </customwidget>
  </customwidgets>
  <resources>
